force-app/main/default/objects/ucinn_ascendv2__Degree_Code__c/ucinn_ascendv2__Degree_Code__c.object-meta.xml
<CustomObject>
    <description>Holds degree information</description>
    <label>Degree Code</label>
    <nameField>
        <label>Degree</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Degree Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>