force-app/main/default/objects/ucinn_ascendv2__Degree_Code__c/fields/ucinn_ascendv2__Degree_Code__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Degree_Code__c</fullName>
    <description>Used to maintain uniqueness and data integration (upsert)</description>
    <externalId>true</externalId>
    <label>Degree Code</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>