force-app/main/default/objects/ucinn_ascendv2__Degree_Code__c/fields/ucinn_ascendv2__Degree_Level__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Degree_Level__c</fullName>
    <label>Degree Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Undergraduate Degree</fullName>
            </value>
            <value>
                <fullName>Masters Degree</fullName>
            </value>
            <value>
                <fullName>Doctorate Degree</fullName>
            </value>
            <value>
                <fullName>Associates Degree</fullName>
            </value>
            <value>
                <fullName>Certificate</fullName>
            </value>
            <value>
                <fullName>Post-Doctoral Degree</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Other Degree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>