force-app/main/default/objects/ucinn_ascendv2__Degree_Code__c/fields/ucinn_ascendv2__Description__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>