force-app/main/default/objects/ucinn_ascendv2__Degree_Code__c/listViews/ucinn_ascendv2__All.listView-meta.xml
<ListView>
    <fullName>ucinn_ascendv2__All</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Degree_Code__c</columns>
    <columns>ucinn_ascendv2__Degree_Level__c</columns>
    <columns>ucinn_ascendv2__Description__c</columns>
    <columns>ucinn_ascendv2__Is_Active__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>